Added some fixes

--- a/freetype-cmake/README
+++ b/freetype-cmake/README
@@ -1,3 +1,7 @@
+
+******This library is not my property*********
+Library https://github.com/freetype/freetype
+
 FreeType 2.11.0
 ===============
 
